# ATHENA

./: .env.example  .gitignore  README.md  docker-compose.yml  pipeline_requirements.txt  pyproject.toml  run.py
config/pipeline/: README.md  final_thesis_v8.yaml  main_config.yaml  smoke_test_config.yaml
docs/: admin-operations.md  api-contracts.md  architecture.md  deployment.md  gcp-pipeline.md  study-flow.md
docs/architecture/: data-models.md  pipeline-architecture.md
docs/getting-started/: codebase-tour.md  quickstart.md
docs/guides/: admin-operations.md  pipeline-workflow.md  testing-and-verification.md
docs/reference/: artifacts.md  commands.md  glossary.md  observability.md  performance.md  security.md  troubleshooting.md
public_fixtures/public_fixtures/: README.md
public_fixtures/public_fixtures/metadata/: smoke_seed_00.json
scripts/pipeline/: archive_artifacts.py  clean_all_outputs.ps1  clean_all_outputs.sh  dump_environment.ps1  dump_environment.sh  generate_checksums.py  generate_rating_tool.py  generate_smoke_test_data.py  manual_labeler.py  manual_labeler_v2.py  preflight_check.py  requirements_iopaint.txt  run_baselines.py  setup_and_run.ps1  setup_and_run.sh
scripts/pipeline/scraper/: scrape_wikimedia_v4.py  verify_highres.py
scripts/repo/: audit_public_surface.ps1  check_private_artifacts.ps1  download_public_weights.ps1
scripts/utilities/: analyze_expert_exports.py  build_pptx_from_powerpoint_md.py  build_stage18_website_pack.py  build_test_expert_pack.py  build_three_part_expert_pack.py  build_website_evaluator_pack.py  calibrate_filtering_thresholds.py  check_leakage_v1.py  compare_stage13_runs.py  create_caption_quality_chart.py  create_period_coverage_chart.py  download_production_exports.py  europeana.py  generate_structure_v1.py  generate_thesis_latex_assets.py  repack_expert_zip_by_block.py  reset_production_study_runtime.py  run_comodgan_batch.py  simulate_two_validators.py
services/api/: .env.example  Dockerfile  README.md  alembic.ini  render.yaml  requirements.txt  start.py
services/api/alembic/: env.py
services/api/alembic/versions/: 0001_initial_schema.py  0002_profile_and_stage_feedback.py  0003_protocol_version_and_comprehension.py  0004_block_c_stage_feedback.py
services/api/app/: __init__.py  main.py  models.py
services/api/app/api/: deps.py
services/api/app/core/: config.py  security.py
services/api/app/db/: session.py
services/api/app/schemas/: __init__.py  admin.py  auth.py  block_a.py  block_b.py  block_c.py  session.py
services/api/bootstrap/: README.md
services/api/tests/: test_api_core.py  test_export_reliability.py
services/web/: .env.example  Dockerfile  README.md  package.json  playwright.config.ts
src/thesis_pipeline/: __init__.py  config_manager.py  logging_config.py  main.py  stage_registry.py  stages.py
src/thesis_pipeline/analysis/: README.md  bias_analyzer.py  caption_analysis.py  domain_metrics.py  failure_analyzer.py  realism_validator.py  statistical_rigor.py  statistical_tests.py
src/thesis_pipeline/components/: README.md  audit.py  data_acquisition.py  data_acquisition_europeana.py  data_acquisition_met.py  data_cleaning.py  dataset.py  deployment_preparation.py  exploratory_data_analysis.py  mask_generators.py  masking.py  model_evaluation.py  model_training.py  processing.py  prompt_utils.py  quality.py  splitting.py
src/thesis_pipeline/core/: README.md  __init__.py  config.py  logging.py
src/thesis_pipeline/pipeline/: README.md  __init__.py  app.py  governance.py  registry.py  stage_groups.py
src/thesis_pipeline/reporting/: odyssey_generator.py
src/thesis_pipeline/stages/: README.md  __init__.py  stage_00_reproducibility.py  stage_01_research_design.py  stage_02_data_acquisition.py  stage_03_intelligent_filtering.py  stage_04_yolo_validation.py  stage_05_baselines.py  stage_06_exploratory_data_analysis.py  stage_07_caption_generation.py  stage_08_caption_refinement.py  stage_09_data_processing.py  stage_10_data_splitting.py  stage_11_feature_engineering.py  stage_12_hyperparameter_tuning.py  stage_13_model_training.py  stage_14_baseline_finetuning.py  stage_15_model_evaluation.py  stage_16_deployment_preparation.py  stage_17_reporting.py  stage_18_expert_validation.py
src/thesis_pipeline/utils/: env_loader.py  hero_tracker.py  parallel_executor.py  resource_tracker.py  seed_manager.py  stage_artifacts.py
src/thesis_pipeline/visualization/: __init__.py  plots.py  style.py
tests/: conftest.py  warnings_inventory.md
tests/stages/: test_stage01.py  test_stage03_eda.py  test_stage04_captioning.py  test_stage06_processing.py  test_stage07_splitting.py  test_stage08_masking.py  test_stage09_tuning.py  test_stage10_training.py  test_stage11_evaluation.py  test_stage_02_filtering.py  test_stage_05_refinement.py
tests/unit/: test_audit.py  test_baselines.py  test_captioning.py  test_conditioning_interaction_analysis.py  test_data_acquisition_met_europeana.py  test_data_audit.py  test_data_cleaning_soft_gate.py  test_deep_baselines_optional.py  test_deep_baselines_runtime.py  test_domain_metrics.py  test_evaluation_stratification.py  test_filtering_bias_disparity.py  test_main_cli_flags.py  test_mask_realism_stage.py  test_metrics_lab_ranges.py  test_parallel_executor.py  test_processing_limit.py  test_quality_filter_focus.py  test_resource_tracker.py  test_seed_manager.py  test_setup_wrapper_stage_order.py  test_significance_matrix_plots.py  test_splitting_leakage.py  test_stage02_acquisition_validity.py  test_stage06_grounding_mask_metrics.py  test_stage06_grounding_validation.py  test_stage06_spatial_purity.py  test_stage06_spatial_regeneration.py  test_stage10b_guardrails.py  test_stage11_mini_sweep.py  test_stage12_regime_comparison.py  test_stage12_source_regime_sampling.py  test_stage12_trial_selection.py  test_stage13_all_vs_all_stats.py  test_stage13_spatial_and_control_integrity.py  test_stage14_model_preference.py  test_stage16_anchor_manifests.py  test_stage16_top1_method_contract.py  test_statistical_rigor.py  test_statistical_tests.py  (+7 more)
(+67 files in other folders)
